--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -5,7 +5,7 @@
    </head>
    <body style="background-color:mediumseagreen;">
       <h1 style="color:white;">Profile Page - Emma Ogle</h1>
-     <img> src="hat.jpg'</img>
+     <img> src="bacs200/hat.jpg'</img>
       <p style="color:white;">info info info</p>
    </body>
 </html>
