--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -5,7 +5,7 @@
    </head>
    <body style="background-color:mediumseagreen;">
       <h1 style="color:white;">Profile Page - Emma Ogle</h1>
-     <img> src="bacs200/hat.jpg'</img>
+     <img> src="https://emmagesena.github.io/bacs200/hat.jpg'</img>
       <p style="color:white;">Hi! I'm Emma and I'm a sophomore in Software Engineering. I am excited to learn the programming languages learned to develop websites.
    My hobbies include musical theater, freshwater fish-keeping, and anything arts and crafts related. </p>
    </body>
