--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -4,7 +4,7 @@
       <title>Profile page</title>
    </head>
    <body style="background-color:hotpink;">
-      <h1 style="color:white; font-family:brushscriptmt;">An Inspiration - Queen Nicki Minaj</h1>
+      <h1 style="color:white; font-family: 'Brush Script MT' , cursive;">An Inspiration - Queen Nicki Minaj</h1>
      <img src="https://emmagesena.github.io/bacs200/hat.jpg">
       <p style="color:white;">nicki </p>
    </body>
