--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -5,7 +5,7 @@
    </head>
    <body style="background-color:hotpink;">
       <h1 style="color:white; font-family: 'Brush Script MT' , cursive;">An Inspiration - Queen Nicki Minaj</h1>
-     <img src="https://emmagesena.github.io/bacs200/hat.jpg">
+     <img src="https://emmagesena.github.io/bacs200/NICKIMINAJ.png">
       <p style="color:white;">nicki </p>
    </body>
 </html>
