--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -18,5 +18,6 @@
          not box yourself into anyone's limitations or ideas or judgments. That's what it means to me. So you were right!"</b> </p>
       <p style="color:white;"> Nicki's presence goes beyond crazy wigs, nostalgic memories, and chart-topping songs. She is a positive role model for her fans
          and is constantly preaching self love and respect, which I think is important for society</p>
+      <img src="https://emmagesena.github.io/bacs200/200.gif">
    </body>
 </html>
