--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -1,2 +1,3 @@
 <li>Week 1 - <a href="../index.html">Project 1 - Github Repo</a> </li>
 <li>Week 2 - <a href="inspire.html">Project 2 - Inspire Me</a> </li>
+<li>Profile Page - <a href="profile.html">Profile Page - Emma Ogle</a> </li>
