--- a/bacs200/amuse.html
+++ b/bacs200/amuse.html
@@ -8,12 +8,16 @@
         </head>
         <body style = "background-color:lightcyan; color:teal; font-family:verdana">
     
-            <h1>Amusements</h1>
-            <img src="https://shrinking-world.com/static/images/unc/bacs200/Bear_Logo.png" alt="Logo">
-            <h2>Amusement #1</h2>
-            <p>Description ... </p>
-            <p>Description ... </p>
-            <p><a href="http://google.com">Learn More ...</a></p>
+            <h1>Amusing Websites</h1>
+            <h2>CAT BOUNCE!</h2>
+            <img src="https://emmagesena.github.io/bacs200/CatBounce.png">
+            <p>Cat Bounce is a simple website in which you get to do exactly what the title implies-- bounce cats around. There are six 2-D images of cats on a gradient 
+            background that are in constant motion. The user can choose to click and drag on any of the cats, launching it into any direction they choose. Pressing the "Make
+            it Rain" button in the top right-hand corner makes a shower of cats quickly fall across the screen before disappearing. </p>
+            <p>Cat Bounce was created by Tara Sinn in 2012 using Javascript. On her informational page(which can be reached through the Cat Bounce website, Tara includes
+            coding resouces and organizations that cat-lovers may donate to in order to help animals. Cat Bounce also won the 2019 People's Voice Webby Award for Weirdest 
+            Website.</p>
+            <p><a href="https://cat-bounce.com/">Click here to access Cat Bounce!</a></p>
             
         </body>
     </html>
