--- a/bacs200/amuse.html
+++ b/bacs200/amuse.html
@@ -21,7 +21,7 @@
             <p><a href="https://cat-bounce.com/">Click here to access Cat Bounce!</a></p>
             
             <h2>MapCrunch</h2>
-            <img src"https://emmagesena.github.io/bacs200/MapCrunch.png">
+            <img src="https://emmagesena.github.io/bacs200/MapCrunch.png">
             <p>Map Crunch is a website that takes you to a random street view via Google Street View. There is an Options panel that allows the user to filter results by country and 
                 type of location. The user can use the white arrows to 'travel' down each street and explore just about any part of the world that has been
                 recorded by Google Maps. There is also a gallery created by users that contains the most interesting or beautiful views found using the website.</p>
@@ -30,7 +30,7 @@
             <p><a href="https://www.mapcrunch.com/">Click here to access Map Crunch</a></p>
             
             <h3>Quick, Draw!</h2>
-            <img src"https://emmagesena.github.io/bacs200/QuickDraw.png">
+            <img src="https://emmagesena.github.io/bacs200/QuickDraw.png">
             <p>Quick Draw is an AI experiment in which the user tries to draw a specific object and a neural network tries to guess what they are drawing. Once the AI guesses the user's
                 drawing, it displays a comparison to other users' drawings of that same object, as well as other objects that the AI detected in the user's drawing.</p>
             <p>The developers, Jonas Jongejan, Henry Rowley, Takashi Kawashima, Jongmin Kim, and Nick Fox-Gieg, collaborated with Google developers to create the neural network. Initially,
