--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -3,7 +3,7 @@
     <head>
 
         <meta charset="UTF-8">
-        <title>Amuse Me-BACS 200 Project 3</title>
+        <title>Educate Me-BACS 200 Project 4</title>
 
     </head>
     <body style = "background-color:rgb(8, 8, 2); color:rgb(236, 75, 75); font-family:verdana">
@@ -19,7 +19,7 @@
       <td><div style="max-width:854px">
         <div style="position:relative;height:0;padding-bottom:56.25%">
             <iframe src="https://embed.ted.com/talks/noy_thrupkaew_human_trafficking_is_all_around_you_this_is_how_it_works"
-             width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" 
+             width="2562" height="1440" style="position:absolute;left:0;top:0;width:100%;height:100%" 
              frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
 
              <a href="https://www.ted.com/talks/noy_thrupkaew_human_trafficking_is_all_around_you_this_is_how_it_works?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">
@@ -35,7 +35,7 @@
       <td>Steven Sharp Nelson: How music can help you find peace after loss</td>
       <td><div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%">
         <iframe src="https://embed.ted.com/talks/steven_sharp_nelson_how_music_can_help_you_find_peace_after_loss" 
-        width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" 
+        width="2562" height="1440" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" 
         scrolling="no" allowfullscreen></iframe></div></div>
 
         <a href = "https://www.ted.com/talks/steven_sharp_nelson_how_music_can_help_you_find_peace_after_loss?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">
@@ -52,7 +52,7 @@
         <td>
             <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%">
                 <iframe src="https://embed.ted.com/talks/jim_chuchu_why_are_stolen_african_artifacts_still_in_western_museums" 
-                width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%"
+                width="2562" height="1440" style="position:absolute;left:0;top:0;width:100%;height:100%"
                 frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
             
         <a href= "https://www.ted.com/talks/jim_chuchu_why_are_stolen_african_artifacts_still_in_western_museums?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">
