--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -67,6 +67,18 @@
             of the objects they "own" and their significance to the communities from which they were taken.
         </td>
     </tr>
+    <tr>
+        <td>RSA Animate: Left Brain, Right Brain</td>
+        <td>
+            <iframe width="2562" height="1440" src="https://www.youtube.com/embed/Ql3Jp3ydfE8" title="YouTube video player" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <a href= "https://youtu.be/Ql3Jp3ydfE8">Link to Video on Youtube</a>
+        </td>
+        <td>
+            In this early RSA Animate Matthew Taylor explores how brain and behaviour research 
+            is increasingly being incorporated into political and policy debate. 
+        </td>
+    </tr>   
   </table>
   </body>
   </html>
