--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -8,6 +8,7 @@
     </head>
     <body style = "background-color:rgb(8, 8, 2); color:rgb(236, 75, 75); font-family:verdana">
 
+        <h1> Educational Videos </h1>
 <table>
     <tr>
       <th>Title and Speaker</th>
