--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -14,6 +14,8 @@
 <li>Week 2 - <a href="inspire.html">Project 2 - Inspire Me</a> </li>
 <li>Week 3 - <a href="https://emmagesena.github.io/bacs200/amuse.html"> Project 3 - Amuse Me</a> </li>
 <li>Week 4 - <a href="https://emmagesena.github.io/bacs200/educate.html"> Project 4 - Educate Me </a> </li>
+<li>Week 5 - <a href="https://emmagesena.github.io/bacs200/test.html"> Project 5 - Test Page </a></li>        
+        
 <li>Profile Page - <a href="profile.html">Profile Page - Emma Ogle</a> </li>
       
   </body>
