--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -43,6 +43,11 @@ font-family: Georgia, 'Times New Roman', Times, serif">
         <td><a href="https://emmagesena.github.io/bacs200/test.html">Test Page</a></td>
         <td><a href="https://shrinking-world.com/course/bacs200/project/05">Project 5</a></td>
     </tr> 
+    <tr>
+        <td>Project 6</td>
+        <td><a href="https://emmagesena.github.io/bacs200/superhero.html">Superhero Gallery</a></td>
+        <td><a href="https://shrinking-world.com/course/bacs200/project/04">Project 6</a></td>
+    </tr> 
 </table>
 <h2>Other Links</h2>
 <list>
