--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -16,6 +16,7 @@
 <li>Week 4 - <a href="https://emmagesena.github.io/bacs200/educate.html"> Project 4 - Educate Me </a> </li>
 <li>Week 5 - <a href="https://emmagesena.github.io/bacs200/test.html"> Project 5 - Test Page </a></li> 
 <li>Week 6 - <a href="https://emmagesena.github.io/bacs200/superhero.html">Project 6 - Superhero Gallery </a></li>
+<li>Week 7 - <a href="https://emmagesena.github.io/bacs200/wanted.html">Project 7 - Wanted Poster </a></li>
         
 <li>Profile Page - <a href="profile.html">Profile Page - Emma Ogle</a> </li>
       
