--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -46,7 +46,12 @@ font-family: Georgia, 'Times New Roman', Times, serif">
     <tr>
         <td>Project 6</td>
         <td><a href="https://emmagesena.github.io/bacs200/superhero.html">Superhero Gallery</a></td>
-        <td><a href="https://shrinking-world.com/course/bacs200/project/04">Project 6</a></td>
+        <td><a href="https://shrinking-world.com/course/bacs200/project/06">Project 6</a></td>
+    </tr> 
+    <tr>
+        <td>Project 7</td>
+        <td><a href="https://emmagesena.github.io/bacs200/wanted.html">Wanted Poster</a></td>
+        <td><a href="https://shrinking-world.com/course/bacs200/project/07">Project 7</a></td>
     </tr> 
 </table>
 <h2>Other Links</h2>
