--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -17,6 +17,7 @@
 <li>Week 5 - <a href="https://emmagesena.github.io/bacs200/test.html"> Project 5 - Test Page </a></li> 
 <li>Week 6 - <a href="https://emmagesena.github.io/bacs200/superhero.html">Project 6 - Superhero Gallery </a></li>
 <li>Week 7 - <a href="https://emmagesena.github.io/bacs200/wanted.html">Project 7 - Wanted Poster </a></li>
+<li>Week 8 - <a href="https://emmagesena.github.io/bacs200/blog.html">Project 8 - Business Blog </a></li>
         
 <li>Profile Page - <a href="profile.html">Profile Page - Emma Ogle</a> </li>
       
