--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -53,6 +53,11 @@ font-family: Georgia, 'Times New Roman', Times, serif">
         <td><a href="https://emmagesena.github.io/bacs200/wanted.html">Wanted Poster</a></td>
         <td><a href="https://shrinking-world.com/course/bacs200/project/07">Project 7</a></td>
     </tr> 
+    <tr>
+        <td>Project 8</td>
+        <td><a href="https://emmagesena.github.io/bacs200/wanted.html">Business Blog</a></td>
+        <td><a href="https://shrinking-world.com/course/bacs200/project/08">Project 8</a></td>
+    </tr> 
 </table>
 <h2>Other Links</h2>
 <list>
