--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -55,7 +55,7 @@ font-family: Georgia, 'Times New Roman', Times, serif">
     </tr> 
     <tr>
         <td>Project 8</td>
-        <td><a href="https://emmagesena.github.io/bacs200/wanted.html">Business Blog</a></td>
+        <td><a href="https://emmagesena.github.io/bacs200/blog.html">Business Blog</a></td>
         <td><a href="https://shrinking-world.com/course/bacs200/project/08">Project 8</a></td>
     </tr> 
 </table>
