--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -57,7 +57,13 @@ font-family: Georgia, 'Times New Roman', Times, serif">
         <td>Project 8</td>
         <td><a href="https://emmagesena.github.io/bacs200/blog.html">Business Blog</a></td>
         <td><a href="https://shrinking-world.com/course/bacs200/project/08">Project 8</a></td>
-    </tr> 
+    </tr>
+    <tr>
+        <td>Project 9</td>
+        <td><a href="https://emmagesena.github.io/bacs200/nonprofit.html">Business Blog</a></td>
+        <td><a href="https://shrinking-world.com/course/bacs200/project/09">Project 8</a></td>
+    </tr>
+    
 </table>
 <h2>Other Links</h2>
 <list>
