--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -60,7 +60,7 @@
 <!--Photo-->
 <div class="w3-row-padding w3-margin-top">
   <div class="w3-col l3 m6 w3-margin-bottom">
-    <img src="https://media-exp1.licdn.com/dms/image/C5603AQGcm2EaKuHP7g/profile-displayphoto-shrink_400_400/0/1633020075265?e=1640822400&v=beta&t=Ql84gm-GtGYcNx3T5rVzBz9eGyABZQ9e5K56on5IbzQ" class="profile" alt="me">
+    <img src="hat.jpg" class="profile" alt="me">
     <h1 style="text-align:center">Hi, I'm <span class="hlight">Emma</span></h1>
   </div> 
   <div class="w3-col 39 m6 w3-margin-bottom">
