--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="proj7.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <style>
+            .blogtxt{
+                         padding-right:100px;
+                         padding-left:100px;
+                         text-align:center;
+                    }
+        </style>
     </head>
     <body>
-        <header>
-            <h1>WANTED: DEAD OR ALIVE</h1>
+                    <!-- Navbar (sit on top) -->
+<div class="w3-top">
+    <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+      <a href="https://emmagesena.github.io/bacs200/index.html" class="w3-bar-item w3-button"><b>Home</b></a>
+      <!-- Float links to the right. Hide them on small screens -->
+      <div class="w3-right w3-hide-small">
+        <a href="https://emmagesena.github.io/bacs200/index.html#projects" class="w3-bar-item w3-button">Projects</a>
+        <!-- CHECK TO MAKE SURE THIS WORKS AFTER UPLOAD-->
+        <a href="https://emmagesena.github.io/bacs200/profile.html" class="w3-bar-item w3-button">About Me</a>
+        <a href="https://www.linkedin.com/in/emma-ogle-aa4117177/" class="w3-bar-item w3-button">Linkedin</a>
+      </div>
+    </div>
+  </div>
+
+  <header>
+
+  <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+    <img class="w3-image" src="https://i.pinimg.com/originals/11/b6/76/11b6769c8f2ea91b25fa0bb10bcaf4ab.jpg" 
+    alt="banner" width="1500" height="400px" style="filter:grayscale()">
+    <div class="w3-display-middle w3-margin-top w3-center">
+      <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Wanted Poster</b></span></h1>
+    </div>
+</div>
+
+</header>
+
+               
+  <div class="w3-container w3-padding-45 blogtxt" id="about">
+
+  <h1 style="padding-top: 30px;">WANTED: DEAD OR ALIVE</h1>
             <h2>FOR MURDER AND CANNIBALISM</h2>
-        </header>
+ 
         <main>
-            <img src="https://media.newyorker.com/photos/5f4bd91225409f35fe113819/4:3/w_2559,h_1919,c_limit/Gupta-HannibalLecter.jpg" alt="HannibalLecter">          
+            <img src="https://media.newyorker.com/photos/5f4bd91225409f35fe113819/4:3/w_2559,h_1919,c_limit/Gupta-HannibalLecter.jpg" alt="HannibalLecter" width="500">          
             <h2>
                HANNIBAL LECTER
             </h2>
@@ -42,5 +77,7 @@
             </h3>   
         </footer>
 
+
+</div>
     </body>
 </html>
