changes for project 10

--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -6,19 +6,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
+                        <!-- Navbar (sit on top) -->
+<div class="w3-top">
+    <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+      <a href="https://emmagesena.github.io/bacs200/index.html" class="w3-bar-item w3-button"><b>Home</b></a>
+      <!-- Float links to the right. Hide them on small screens -->
+      <div class="w3-right w3-hide-small">
+        <a href="https://emmagesena.github.io/bacs200/index.html#projects" class="w3-bar-item w3-button">Projects</a>
+        <!-- CHECK TO MAKE SURE THIS WORKS AFTER UPLOAD-->
+        <a href="https://emmagesena.github.io/bacs200/profile.html" class="w3-bar-item w3-button">About Me</a>
+        <a href="https://www.linkedin.com/in/emma-ogle-aa4117177/" class="w3-bar-item w3-button">Linkedin</a>
+      </div>
+    </div>
+  </div>
 
-    <header>
+
         <div class="container p-5 my-5 bg-dark text-white">
             <a href="index.html" class="text-white">
                 <h1> Social Media and Extremism</h1>
             </a>
             <p>Project 8 - Business Blog </p>
         </div>    
-    </header>
+  
     
     <main>
         <div class="container mt-5">
