--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -18,7 +18,7 @@
     }
 
     .blogtxt{
-      padding-right:700px;
+      padding-right:100px;
     }
 
 </style>
@@ -36,16 +36,19 @@
         </div>
       </div>
     </div>
+
+    <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+      <img class="w3-image" src="https://wallpaper.dog/large/17187445.jpg" 
+      alt="banner" width="1500" height="400" style="filter:grayscale()">
+      <div class="w3-display-middle w3-margin-top w3-center">
+        <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>An Inspiration: Queen Nicki Minaj</b></span></h1>
+      </div>
+    </div>
     
   </header>
 
 <!-- Page content -->
 
-<!--Image-->
-<img class="w3-image" src="https://emmagesena.github.io/bacs200/NICKIMINAJ.png" alt="nicki" width="1000" height="600">
-  <div class="w3-display-container w3-margin-top">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>An Inspiration: Queen Nicki Minaj</b></span></h1>
-  </div>
 
 
   <!--Text-->
