add banners for style proj 10

--- a/bacs200/amuse.html
+++ b/bacs200/amuse.html
@@ -23,7 +23,7 @@
     
         </head>
         <body>
-
+<header>
             <!-- Navbar (sit on top) -->
 <div class="w3-top">
     <div class="w3-bar w3-white w3-wide w3-padding w3-card">
@@ -38,11 +38,19 @@
     </div>
   </div>
 
-  
-        <h1 style="padding-top:50px" class="clrback">Amusing Websites</h1>
+  <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+    <img class="w3-image" src="https://i.pinimg.com/originals/42/88/c6/4288c68ab591b006081a070ede467559.jpg" 
+    alt="banner" width="1500" height="400" style="filter:grayscale()">
+    <div class="w3-display-middle w3-margin-top w3-center">
+      <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Amusing Websites</b></span></h1>
+    </div>
+  </div>
+
+ </header>
 
 
-        <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+
+        <div class="w3-display-container w3-content w3-wide" style="max-width:1500px; padding-top:50px" id="home">
             <img class="w3-image" src="https://emmagesena.github.io/bacs200/CatBounce.png" alt="cat" width="1500" height="800">
             <div class="w3-display-middle w3-margin-top w3-center">
               <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>CAT BOUNCE!</b></span></h1>
