--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<header>
                         <!-- Navbar (sit on top) -->
 <div class="w3-top">
     <div class="w3-bar w3-white w3-wide w3-padding w3-card">
@@ -25,12 +26,21 @@
     </div>
   </div>
 
+  <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+    <img class="w3-image" src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGVyc29uJTIwdHlwaW5nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80" 
+    alt="banner" width="1500" height="400" style="filter:grayscale()">
+    <div class="w3-display-middle w3-margin-top w3-center">
+      <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Business Blog</b></span></h1>
+    </div>
+  </div>
+
+</header>
+
 
         <div class="container p-5 my-5 bg-dark text-white">
             <a href="index.html" class="text-white">
                 <h1> Social Media and Extremism</h1>
             </a>
-            <p>Project 8 - Business Blog </p>
         </div>    
   
     
