--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -19,6 +19,8 @@
     
 <body>
 
+<header>    
+
 <div class="w3-top">
     <div class="w3-bar w3-white w3-wide w3-padding w3-card">
       <a href="https://emmagesena.github.io/bacs200/index.html" class="w3-bar-item w3-button"><b>Home</b></a>
@@ -32,7 +34,17 @@
     </div>
   </div>
 
-    <h1 style="padding-top:50px" class="clrback">Test Page</h1>
+  
+  <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+    <img class="w3-image" src="https://images.squarespace-cdn.com/content/v1/5117862ae4b0cd4cc717de99/1605629010784-1O3U2CEWIUSBMRKNSCFE/Construction-Photography-House-Home-Roof-Building-Photographer-UK-%C2%A9-Scott-Ramsey-Photographer-www.scottramsey.co.uk.jpg?format=1000w" 
+    alt="banner" width="1500" height="400" style="filter:grayscale()">
+    <div class="w3-display-middle w3-margin-top w3-center">
+      <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Test Page</b></span></h1>
+    </div>
+  </div>
+ 
+  </header>
+
     <h2>Project Links</h2>
     <table width="750" bordercolor="azure">
         <tr>
