image had watermark

--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -36,7 +36,7 @@
 
   
   <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-    <img class="w3-image" src="https://images.squarespace-cdn.com/content/v1/5117862ae4b0cd4cc717de99/1605629010784-1O3U2CEWIUSBMRKNSCFE/Construction-Photography-House-Home-Roof-Building-Photographer-UK-%C2%A9-Scott-Ramsey-Photographer-www.scottramsey.co.uk.jpg?format=1000w" 
+    <img class="w3-image" src="https://images.unsplash.com/photo-1599995903128-531fc7fb694b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8Y29uc3RydWN0aW9uJTIwc2l0ZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" 
     alt="banner" width="1500" height="400" style="filter:grayscale()">
     <div class="w3-display-middle w3-margin-top w3-center">
       <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Test Page</b></span></h1>
