trying to make html valid

--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-<title>BACS 200 Index Page</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-    .projimg {
-        filter: grayscale(100%);
-        width: 200px;
-        height: 125px;
+<head>
+    <title>BACS 200 Index Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+        .projimg {
+            filter: grayscale(100%);
+            width: 200px;
+            height: 125px;
+        }
+    </style>
+</head>
 
-    }
-</style>
+
+
 <body>
 
 <!-- Navbar (sit on top) -->
