--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
-<title>BACS 200 Project 2</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
+<head>
+    <title>BACS 200 Project 2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
 
-    .clrback{
-      background-color:rgb(223, 171, 214);
-      border-radius: 25px;
-      text-align: center;
-    }
+        .clrback {
+            background-color: rgb(223, 171, 214);
+            border-radius: 25px;
+            text-align: center;
+        }
 
-    .hlight{
-      color:rgb(170, 57, 151);
-      font-weight: bold;
-    }
+        .hlight {
+            color: rgb(170, 57, 151);
+            font-weight: bold;
+        }
 
-    .blogtxt{
-      padding-right:100px;
-    }
+        .blogtxt {
+            padding-right: 100px;
+        }
+    </style>
+</head>
 
-</style>
 <body>
 
   <header>
@@ -89,7 +91,7 @@
 
 
 <!-- End page content -->
-</div>
+
 
 
 <!-- Footer -->
