--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html>
-<title>BACS 200 Profile Page</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-    h3 {
-        font-weight: bold;
-    }
+<head>
+    <title>BACS 200 Profile Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+        h3 {
+            font-weight: bold;
+        }
 
-    h4 {
-      font-weight: bold;
-    }
+        h4 {
+            font-weight: bold;
+        }
 
-    .skill {
-      font-weight: bold;
-    }
+        .skill {
+            font-weight: bold;
+        }
 
-    .profile{
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width:275px; 
-      border-radius:250px; 
-    }
+        .profile {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 275px;
+            border-radius: 250px;
+        }
 
-    .greenback{
-      background-color:rgb(204, 229, 194);
-      border-radius: 25px;
-      text-align: center;
-    }
+        .greenback {
+            background-color: rgb(204, 229, 194);
+            border-radius: 25px;
+            text-align: center;
+        }
 
-    .hlight{
-      color:rgb(117, 143, 107);
-      font-weight: bold;
-    }
+        .hlight {
+            color: rgb(117, 143, 107);
+            font-weight: bold;
+        }
+    </style>
+</head>
 
-</style>
 <body>
 
   <header>
@@ -164,7 +166,7 @@
 
 
 <!-- End page content -->
-</div>
+
 
 
 <!-- Footer -->
