--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -45,7 +45,7 @@
 
   <!-- Project Section -->
   <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"><a id="projects">BACS 200 Projects</a></h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"><a>BACS 200 Projects</a></h3>
   </div>
 
   <div class="w3-row-padding">
@@ -123,7 +123,7 @@
       <p>Hi! I am a sophomore at University of Northern Colorado studying Software Engineering. I am
           enjoying my studies and learning how to create software and web pages. 
       </p>
-      <a href="https://emmagesena.github.io/bacs200/profile.html"><button class="w3-button w3-light-grey w3-block">Learn More About Me</button></a>
+     <button class="w3-button w3-light-grey w3-block"> <a href="https://emmagesena.github.io/bacs200/profile.html"></a>Learn More About Me</button>
     </div>
   </div>
 
