--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -123,7 +123,7 @@
       <p>Hi! I am a sophomore at University of Northern Colorado studying Software Engineering. I am
           enjoying my studies and learning how to create software and web pages. 
       </p>
-     <button class="w3-button w3-light-grey w3-block"> <a href="https://emmagesena.github.io/bacs200/profile.html"></a>Learn More About Me</button>
+     <button class="w3-button w3-light-grey w3-block"> <a href="https://emmagesena.github.io/bacs200/profile.html">Learn More About Me</a></button>
     </div>
   </div>
 
