--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>BACS 200 Project 2</title>
     <meta charset="UTF-8">
@@ -41,7 +41,7 @@
 
     <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
       <img class="w3-image" src="https://wallpaper.dog/large/17187445.jpg" 
-      alt="banner" width="1500" height="400" style="filter:grayscale()">
+      alt="banner" width="1500" height="400" style="filter:grayscale(100%)">
       <div class="w3-display-middle w3-margin-top w3-center">
         <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>An Inspiration: Queen Nicki Minaj</b></span></h1>
       </div>
