--- a/bacs200/amuse.html
+++ b/bacs200/amuse.html
@@ -40,7 +40,7 @@
 
   <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
     <img class="w3-image" src="https://i.pinimg.com/originals/42/88/c6/4288c68ab591b006081a070ede467559.jpg" 
-    alt="banner" width="1500" height="400" style="filter:grayscale()">
+    alt="banner" width="1500" height="400" style="filter:grayscale(100%)">
     <div class="w3-display-middle w3-margin-top w3-center">
       <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Amusing Websites</b></span></h1>
     </div>
@@ -50,7 +50,7 @@
 
 
 
-        <div class="w3-display-container w3-content w3-wide" style="max-width:1500px; padding-top:50px" id="home">
+        <div class="w3-display-container w3-content w3-wide" style="max-width:1500px; padding-top:50px">
             <img class="w3-image" src="https://emmagesena.github.io/bacs200/CatBounce.png" alt="cat" width="1500" height="800">
             <div class="w3-display-middle w3-margin-top w3-center">
               <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>CAT BOUNCE!</b></span></h1>
@@ -68,14 +68,14 @@
         </div> 
 
 
-        <div class="w3-display-container w3-content w3-wide" style="max-width:1500px; padding-top: 30px;" id="home">
+        <div class="w3-display-container w3-content w3-wide" style="max-width:1500px; padding-top: 30px;">
             <img class="w3-image" src="https://emmagesena.github.io/bacs200/MapCrunch.png" alt="map" width="1500" height="800">
             <div class="w3-display-middle w3-margin-top w3-center">
               <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>MapCrunch</b></span></h1>
             </div>
         </div>
     
-        <div class="w3-container w3-padding-45 blogtxt" id="about">
+        <div class="w3-container w3-padding-45 blogtxt">
             <p>Map Crunch is a website that takes you to a random street view via Google Street View. There is an Options panel that allows the user to filter results by country and 
                 type of location. The user can use the white arrows to 'travel' down each street and explore just about any part of the world that has been
                 recorded by Google Maps. There is also a gallery created by users that contains the most interesting or beautiful views found using the website.
@@ -84,14 +84,14 @@
             <a href="https://www.mapcrunch.com/"><button class="w3-button w3-light-grey w3-block">Go to website</button></a>
         </div> 
 
-        <div class="w3-display-container w3-content w3-wide" style="max-width:1500px; padding-top: 30px;" id="home">
+        <div class="w3-display-container w3-content w3-wide" style="max-width:1500px; padding-top: 30px;">
             <img class="w3-image" src=https://emmagesena.github.io/bacs200/QuickDraw.png alt="draw" width="1500" height="800">
             <div class="w3-display-middle w3-margin-top w3-center">
               <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Quick, Draw!</b></span></h1>
             </div>
         </div>
     
-        <div class="w3-container w3-padding-45 blogtxt" id="about">
+        <div class="w3-container w3-padding-45 blogtxt">
             <p>Quick Draw is an AI experiment in which the user tries to draw a specific object and a neural network tries to guess what they are drawing. Once the AI guesses the user's
                 drawing, it displays a comparison to other users' drawings of that same object, as well as other objects that the AI detected in the user's drawing.
             <br>The developers, Jonas Jongejan, Henry Rowley, Takashi Kawashima, Jongmin Kim, and Nick Fox-Gieg, collaborated with Google developers to create the neural network. Initially,
