--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -97,8 +97,7 @@
         </td>
         <td><div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%">
           <iframe src="https://embed.ted.com/talks/steven_sharp_nelson_how_music_can_help_you_find_peace_after_loss" 
-          class="video" frameborder="0" 
-          scrolling="no" allowfullscreen></iframe></div></div>
+          class="video" style="border:0; overflow:auto;" allowfullscreen></iframe></div></div>
   
   
           </td>
@@ -116,7 +115,7 @@
               <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%">
                   <iframe src="https://embed.ted.com/talks/jim_chuchu_why_are_stolen_african_artifacts_still_in_western_museums" 
                   class="video"
-                  frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
+                  style="border:0; overflow:auto;" allowfullscreen></iframe></div></div>
                
           </td>
           <td class="summary">
@@ -135,7 +134,7 @@
           </td>
           <td>
               <iframe width="535" height="300" src="https://www.youtube.com/embed/Ql3Jp3ydfE8" title="YouTube video player" 
-                      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          
           </td>
           <td class="summary">
