--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -37,7 +37,7 @@
   
   <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
     <img class="w3-image" src="https://images.unsplash.com/photo-1599995903128-531fc7fb694b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8Y29uc3RydWN0aW9uJTIwc2l0ZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" 
-    alt="banner" width="1500" height="400" style="filter:grayscale()">
+    alt="banner" width="1500" height="400" style="filter:grayscale(100%)">
     <div class="w3-display-middle w3-margin-top w3-center">
       <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Test Page</b></span></h1>
     </div>
@@ -46,7 +46,7 @@
   </header>
 
     <h2>Project Links</h2>
-    <table width="750" bordercolor="azure">
+    <table style="width:750;">
         <tr>
             <th>Project</th>
             <th>Page</th>
@@ -100,11 +100,11 @@
         
     </table>
     <h2>Other Links</h2>
-    <list>
+    
         <li><a href="https://emmagesena.github.io/bacs200/index.html">BACS 200 Index</a></li>
         <li><a href="https://emmagesena.github.io/bacs200/profile.html">Profile Page</a></li>
         <li><a href="https://validator.w3.org/nu/?doc=https://https://Mark-Seaman.github.io">HTML Validator</a></li>
-    </list>
+
 
 
 
