--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -46,7 +46,7 @@
   </header>
 
     <h2>Project Links</h2>
-    <table style="width:750;">
+    <table style="width:750px;">
         <tr>
             <th>Project</th>
             <th>Page</th>
