apparently i forgot the g on lang my b

--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lan="en">
+<html lang="en">
     <head>
         <title>Project 6 - Superhero Gallery</title> 
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
