--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <title>Project 7</title>
         <style>
             .blogtxt{
                          padding-right:100px;
@@ -29,7 +30,7 @@
 
   <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
     <img class="w3-image" src="https://i.pinimg.com/originals/11/b6/76/11b6769c8f2ea91b25fa0bb10bcaf4ab.jpg" 
-    alt="banner" width="1500" height="400px" style="filter:grayscale()">
+    alt="banner" width="1500" height="400" style="filter:grayscale(100%)">
     <div class="w3-display-middle w3-margin-top w3-center">
       <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Wanted Poster</b></span></h1>
     </div>
