--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -28,7 +28,7 @@
 
   <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
     <img class="w3-image" src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGVyc29uJTIwdHlwaW5nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80" 
-    alt="banner" width="1500" height="400" style="filter:grayscale()">
+    alt="banner" width="1500" height="400" style="filter:grayscale(100%)">
     <div class="w3-display-middle w3-margin-top w3-center">
       <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Business Blog</b></span></h1>
     </div>
@@ -74,20 +74,22 @@
                 <div class="col-sm">
                     <h2>Social Implications of Allowing Social Media Extremism</h2>
                     <ul>
-                        <li><h3>Pros</h3></li>
+                        <li><h3>Pros</h3>
                         <h4>Evidence and Accountability for Crimes</h4>
                         <p>If extremists are allowed to post on social media, it becomes easier for the police to 
                             find culprits when crimes are committed. An especially easy crime to pinpoint would be threats. 
                             If extremists are banned from social media, hate crimes may be harder to solve.
                         </p>
+                        </li>
 
-                        <li><h3>Cons</h3></li>
+                        <li><h3>Cons</h3>
                         <h4>Increase in Crime</h4>
                         <p>Extremists use social media to recruit and influence people to their cause. These pockets of radicalized social media users 
                             have a negative impact on society, because these extreme ideas may contain talk of violence and discrimination. 
                             Exposure and brainwashing under these ideas may cause impressionable people groups to act in violent ways or commit hate crimes.
                             The increase in crime caused by these ideas are a major consequence that society faces due to social media extremism.
                         </p>
+                        </li>
                     </ul>
                     <h3>Conclusion:</h3>
                     <p>Although evidence would be more readily avialable if extremists were allowed to post on social media,
@@ -100,20 +102,22 @@
                 <div class="col-sm">
                     <h2>Economic Implications of Allowing Social Media Extremism</h2>
                     <ul>
-                        <li><h3>Pros</h3></li>
+                        <li><h3>Pros</h3>
                         <h4>Resources Better Spent</h4>
                         <p>If social media companies do not spend excess amounts of resources stopping extremists, there will
                             be more money to spend in more pressing areas such as paying their employees, advertisements, and 
                             developing a better user experience. Likewise, the government could better use this money for infrastructure,
                             the healthcare system, etc.
                         </p>
-                        <li><h3>Cons</h3></li>
+                        </li>
+                        <li><h3>Cons</h3>
                         <h4>Major Economic Loss if Extremism is Allowed</h4>
                         <p>According to a 2020 study in the journal Peace Economics, Peace Science, and Public Policy,
                             the economic impact of terrorism and extremism is estimated at $US 33 Billion in 2018 alone. The 
                             four indicators that caused such an economic impact are terrorism-related deaths, injuries, property damages, and 
                             GDP losses.
                         </p>
+                        </li>
                     </ul>
                     <h3>Conclusion</h3>      
                     <p> Social media extremists often lead to terrorism, so it would be well worth it to spend money 
@@ -123,14 +127,15 @@
                 <div class = "col-sm">
                     <h2>Political Implications of Allowing Social Media Extremsism</h2>
                     <ul>
-                        <li><h3>Pros</h3></li>
+                        <li><h3>Pros</h3>
                         <h4>Freedom of Speech</h4>
                         <p>
                             Eliminating those who post extremist-related content on social media on a government scale 
                             would be against the spirit of the First Amendment. The First Amendment guarantees the freedom
                             of expression by prohibiting laws that impose on the rights of an individual to speak freely. 
                         </p>
-                        <li><h3>Cons</h3></li>
+                        </li>
+                        <li><h3>Cons</h3>
                         <h4>National Security and Policial Party Tension</h4>
                         <p>
                             Those who contribute to the growth of extremist ideas may cause an uprising against the government. This 
@@ -138,6 +143,7 @@
                             further polarization of the two major political parties, meaning that both rightists and leftist may lean
                             even further apart towards extremism. This would create even more tension and hatred between political parties.
                         </p>
+                        </li>
                     </ul>
 
                     <h3>Conclusion</h3>
@@ -180,5 +186,3 @@
 </body>
 
 </html>
-© 2021 GitHub, Inc.
-Terms
