--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -52,7 +52,7 @@
 
 <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="https://cdn.5280.com/2016/07/jason_j._hatfield_evening_in_paradise_dsc9706enfuse.jpg" 
-  alt="banner" width="1500" height="400" style="filter:grayscale()">
+  alt="banner" width="1500" height="400" style="filter:grayscale(100%)">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class=" w3-black w3-opacity-min"><b>Greenwood Wildlife Center</b></span></h1>
   </div>
@@ -60,7 +60,7 @@
 
 </header>
 
-<main role="main">
+<main>
 
   <div id="myCarousel" class="carousel slide" data-ride="carousel" style="padding-top: 50px;">
     <ol class="carousel-indicators">
@@ -92,7 +92,7 @@
       </div>
       <div class="carousel-item">
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
-         focusable="false" role="img"><image href="https://wallpapercave.com/wp/Qb07ajT.jpg" width="100%" height="100%"></svg>
+         focusable="false" role="img"><image href="https://wallpapercave.com/wp/Qb07ajT.jpg" width="100%" height="100%"></image></svg>
         <div class="container">
           <div class="carousel-caption">
             <h1>Donate to save Colorado's wildlife</h1>
